@@ -1,4 +1,4 @@
 # lightdm-webkit-theme-antergos
 ### THIS REPO IS A MIRROR
-#### Theme code is now maintained as part of [lightdm-webkit2-greeter](http://github.com/antergos/lightdm-webkit2-greeter). 
-#### This repo is maintained as a mirror of the theme's code for easy cloning.
+#### Theme code is now maintained as part of [lightdm-webkit2-greeter](http://github.com/antergos/lightdm-webkit2-greeter).
+#### This repo is maintained as a mirror of the theme's code for easy cloning/forking.
