@@ -1,3 +1,7 @@
+Overview of changes in lightdm-webkit2-greeter 2.1.1
+
+    * Fix default theme initialization failure if config file values are missing.
+
 Overview of changes in lightdm-webkit2-greeter 2.1.0
 
     * It is now possible to configure branding including logos and backgrounds
